slimmed down media-link margins

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -38,5 +38,5 @@
       <img src="images/facebook.png" alt="Caste on Facebook">
     </a>
   </div>
-  <img id="circle-logo" src="images/brain-circle.png" alt="Visual Stimulation Quality Products">
+  <img id="circle-logo" src="images/circle-logo.jpg" alt="Visual Stimulation Quality Products">
 </div>
