added new headers

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,7 +9,7 @@
     <a href="#stockists">stockists</a>
   </li>
   <li>
-    <a href="#about">about</a>
+    <a href="#contact">contact</a>
   </li>
   <li>
     <a href="//store.castequality.com">store</a>
@@ -23,7 +23,7 @@
 </div>
 <div id="banner">
   <a class="rollover" href="#project?media">
-    <img src="images/media/phil-experiment-hover.jpg">
-    <img class="hover" src="images/media/phil-experiment.jpg">
+    <img src="images/media/phil-experiment-alt-hover.jpg">
+    <img class="hover" src="images/media/phil-experiment-alt.jpg">
   </a>
 </div>
