--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,16 +25,16 @@
     <img id="instagram" class="hover" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
   <div id="media-links" class="row-fluid">
-    <a href="http://vimeo.com/user16108071">
+    <a href="http://vimeo.com/user16108071" target="_blank">
       <img src="images/vimeo.png" alt="Caste on Vimeo">
     </a>
-    <a href="http://www.youtube.com/user/CASTEQuality">
+    <a href="http://www.youtube.com/user/CASTEQuality" target="_blank">
       <img src="images/youtube.png" alt="Caste on Youtube">
     </a>
-    <a href="https://twitter.com/castequality">
+    <a href="https://twitter.com/castequality" target="_blank">
       <img src="images/twitter.png" alt="Caste on Twitter">
     </a>
-    <a href="https://www.facebook.com/pages/Caste-Quality/241637155973501?group_id=0">
+    <a href="https://www.facebook.com/pages/Caste-Quality/241637155973501?group_id=0" target="_blank">
       <img src="images/facebook.png" alt="Caste on Facebook">
     </a>
   </div>
