--- a/app/styles/_media-links.scss
+++ b/app/styles/_media-links.scss
@@ -75,7 +75,7 @@ $brainCircleMarginTop: $mediaLinksMarginTop + 12px;
 
   padding-bottom: 16px;
 
-  border-bottom: 1px solid rgba(0, 0, 0, .4);
+  border-bottom: 1px inset rgba(0, 0, 0, .5);
   -webkit-background-clip: padding-box; /* for Safari */
   background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 
