--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -3,20 +3,20 @@ p.about {
   font-size: 14px;
   color: rgba(0,0,0,0.5);
   width: 36em;
+
+  & > span {
+    color: black;
+    font-weight: 600;
+
+    &:before {
+      content: '\A\A';
+      white-space: pre;
+    }
+  }
 }
 
 p.about-title {
   font-size: 14px;
   padding: 4px 0;
   font-weight: 600;
-}
-
-p.about > span {
-  color: black;
-  font-weight: 600;
-}
-
-p.about > span:before {
-  content: '\A\A';
-  white-space: pre;
 }
