--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,80 +1,82 @@
+#header {
+  & > * {
+    float: left;
+    height: 118px;
+    margin: 20px;
+    margin-left: 0;
+  }
 
+  &:after {
+    display: table;
+    clear: both;
+  }
 
-#header > * {
-  float: left;
-  height: 118px;
-  margin: 20px 20px 20px 0;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
-#header > :last-child {
-  margin-right: 0;
-}
+#banner {
+  & > a {
+    // position: relative;
+    height: 0;
+    opacity: 1;
+    filter:Alpha(opacity=100);
 
-#header:after {
-  display: table;
-  clear: both;
-}
-
-#banner > a {
-  // position: relative;
-  height: 0;
-  opacity: 1;
-  filter:Alpha(opacity=100);
-}
-
-#banner > a > * {
-  width: 750px;
-  height: 118px;
-  margin-right: 0;
-}
-
-#banner > a > * {
-  position: absolute;
+    & > * {
+      position: absolute;
+      width: 750px;
+      height: 118px;
+      margin-right: 0;
+    }
+  }
 }
 
 #logo {
   position: relative;
   height: 118px;
   width: 118px;
-}
 
-#logo > * {
-  position: absolute;
-  margin: 0;
-}
+  & > * {
+    position: absolute;
+    margin: 0;
+  }
 
-#logo > a > * {
-  height: 118px;
-  width: 118px;
+  & > a {
+    & > * {
+      height: 118px;
+      width: 118px;
+    }
+  }
 }
 
 #links {
   width: 72px;
   height: 118px;
-}
 
-#links > :first-child {
-  margin-top: 14px;
-}
+  &:first-child {
+    margin-top: 14px;
+  }
 
-#links > :last-child {
-  margin-bottom: 14px;
-}
+  &:last-child {
+    margin-bottom: 14px;
+  }
 
-#links > li {
-  width: 72px;
-  height: 18px;
-  text-align: right;
-}
+  & > li {
+    width: 72px;
+    height: 18px;
+    text-align: right;
 
-#links > li > a {
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-  height: 18px;
-  font-variant: small-caps;
-}
+    & > a {
+      font-weight: bold;
+      color: black;
+      text-decoration: none;
+      height: 18px;
+      font-variant: small-caps;
 
-#links > li > a:hover {
-  color: gray;
+      &:hover {
+        color: gray;
+      }
+    }
+  }
 }
