--- a/app/styles/_stockists.scss
+++ b/app/styles/_stockists.scss
@@ -6,8 +6,8 @@
   float: left;
   width: 206px;
   height: 206px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: $content-margin;
+  margin-bottom: $content-margin;
   background-repeat: no-repeat;
   background-origin: content-box;
   background-position: center;
