added support for svg-fallback

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -17,8 +17,8 @@
 </ul>
 <div id="logo">
   <a class="rollover" href="#">
-    <img src="images/media/logo-hover.jpg">
-    <img class="hover" src="images/media/logo.jpg">
+    <img src="images/media/logo-hover.svg" svg>
+    <img class="hover" src="images/media/logo.svg" svg>
   </a>
 </div>
 <div id="banner">
