--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,26 +17,26 @@
 </div>
 <div class="photo-column" ui-scrollfix="138">
   <a class="rollover" ng-href="//store.castequality.com" target="_blank">
-    <img id="featured-hover" src="images/media/store.jpg">
+    <img id="featured-hover" src="images/media/store.svg" svg>
     <img id="featured" class="hover" ng-src="{{store.featured.images[0].url}}" alt="{{store.featured.description}}">
   </a>
   <a class="rollover" href="//instagram.com/castequality" target="_blank">
-    <img id="instagram-hover" src="images/media/insta.jpg">
+    <img id="instagram-hover" src="images/media/insta.svg" svg>
     <img id="instagram" class="hover" ng-src="{{gram.images.standard_resolution.url}}" alt="{{gram.caption}}">
   </a>
   <div id="media-links" class="row-fluid">
     <a href="http://vimeo.com/user16108071" target="_blank">
-      <img src="images/vimeo.png" alt="Caste on Vimeo">
+      <img src="images/vimeo.svg" alt="Caste on Vimeo" svg>
     </a>
     <a href="http://www.youtube.com/user/CASTEQuality" target="_blank">
-      <img src="images/youtube.png" alt="Caste on Youtube">
+      <img src="images/youtube.svg" alt="Caste on Youtube" svg>
     </a>
     <a href="https://twitter.com/castequality" target="_blank">
-      <img src="images/twitter.png" alt="Caste on Twitter">
+      <img src="images/twitter.svg" alt="Caste on Twitter" svg>
     </a>
     <a href="https://www.facebook.com/pages/Caste-Quality/241637155973501?group_id=0" target="_blank">
-      <img src="images/facebook.png" alt="Caste on Facebook">
+      <img src="images/facebook.svg" alt="Caste on Facebook" svg>
     </a>
   </div>
-  <img id="circle-logo" src="images/circle-logo.jpg" alt="Visual Stimulation Quality Products">
+  <img id="circle-logo" src="images/media/brain-circle.svg" alt="Visual Stimulation Quality Products" svg>
 </div>
