--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -73,6 +73,7 @@ $header-height: 118px;
     }
 
     & > a {
+      display: block;
       font-weight: bold;
       color: black;
       text-decoration: none;
