properly renamed images from .png to .jpg

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -17,8 +17,8 @@
 </ul>
 <div id="logo">
   <a class="rollover" href="#">
-    <img src="images/media/logo-hover.svg" svg>
-    <img class="hover" src="images/media/logo.svg" svg>
+    <img src="images/logo-hover.svg" svg>
+    <img class="hover" src="images/logo.svg" data-fallback="images/logo.jpg" svg>
   </a>
 </div>
 <div id="banner">
