adding specs and hooking up services to be dynamic

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,4 +1,4 @@
-<p class="about" ng-bind-html-unsafe="about | emphasized:'Caste Quality'"/>
+<p class="about" ng-bind-html-unsafe="about.description | emphasized:'Caste Quality'"/>
 
 <a href="mailto: info@castequality.com">
   <h3>contact us</h3>
