--- a/app/views/visual.html
+++ b/app/views/visual.html
@@ -1,5 +1,5 @@
 <div id="visuals">
-  <a ng-repeat="photo in visuals" href="{{photo | thumblr:1 }}" ui-jq="fancybox" rel="visuals">
-    <img ng-src="{{photo | thumblr:1 }}">
+  <a ng-repeat="photo in visuals" href="{{photo | thumblr }}" ui-jq="fancybox" rel="visuals">
+    <img ng-src="{{photo | thumblr:2 }}">
   </a>
 </div>
