--- a/app/styles/_splash.scss
+++ b/app/styles/_splash.scss
@@ -1,4 +1,5 @@
 .splash-container {
+  position: relative;
   width: 1200px;
   height: 100%;
 
@@ -16,7 +17,12 @@
 }
 
 .splash-video {
+  display: block;
+  margin: auto;
 
+  iframe {
+    margin-left: 165px;
+  }
 }
 
 .splash-body {
