--- a/app/views/header.html
+++ b/app/views/header.html
@@ -16,7 +16,7 @@
   </li>
 </ul>
 <div id="logo">
-  <a class="rollover" href="#">
+  <a class="rollover" href="#feed">
     <img src="images/logo-hover.svg" svg>
     <img class="hover" src="images/logo.svg" data-fallback="images/logo.jpg" svg>
   </a>
