--- a/app/views/splash.html
+++ b/app/views/splash.html
@@ -2,4 +2,4 @@
   <iframe src="//player.vimeo.com/video/73152136?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1" width="880" height="495" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
-<a class="splash-link" href="#/feed">CLICK HERE TO ENTER</a>
+<a class="splash-link" href="#feed">CLICK HERE TO ENTER</a>
